fix(embed): youtube overflow

--- a/data/embed/source/embed.css
+++ b/data/embed/source/embed.css
@@ -134,3 +134,9 @@
   width: -webkit-calc(100% - 2px);
   width: calc(100% - 2px);
 }
+
+.f-embed__youtube-iframe {
+  max-width: 100%;
+  height: auto;
+  aspect-ratio: 560 / 315;
+}
